Added instruction under copyright video, added other website in index page

--- a/index.html
+++ b/index.html
@@ -79,30 +79,10 @@
     -->
     </div>
     <div class="col-sm-8 text-left">
-      <h1>Caged Lion</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/eG91NEyYJmQ" frameborder="0" allowfullscreen></iframe>
-      <hr>
-      <h3>Questions</h3>
-      <h4>1. Write story in your own words.</h4>
-      <textarea class="form-control" rows=3 id=summary></textarea>
-      <h4>2. What are the charaters in the story?</h4>
-      <textarea class="form-control" rows=3 id=summary></textarea>
-      </textarea>
-      <h4>3. Which character do you like the most? Why?</h4>
-      <textarea class="form-control" rows=3 id=summary></textarea>
-      </textarea>
-      <h4>4. Choose the words that describe the bramhin.</h4>
-      <label><input type="checkbox" value="">Clever</label>
-      <label><input type="checkbox" value="">Helping</label>
-      <label><input type="checkbox" value="">Stupid</label>
-      <label><input type="checkbox" value="">Greedy</label>
-      <h4>5. What is the moral of the story?</h4>
-      <textarea class="form-control" rows=3 id=summary></textarea>
-      </textarea>
-      <h4>5. If you were the man, would you set the tiger free?</h4>
-      <label><input type="radio" value="">Yes</label>
-      <label><input type="radio" value="">No</label>
-      <br>
+      <h3>Video based learning (External sites)</h3>
+      <h4><a href="http://www.learnenglishfeelgood.com/eslvideo/index.html">Learning English Feel Good</a></h4>
+      <h3>YouTube videos, Questions</h3>
+      <h4><a href="tiger-cage.html">     Caged Lion Story</a></h4>
     </div>
     <div class="col-sm-2 sidenav">
       <!--
