Added image, tried image instead of video embed for Pinocchio

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
       <h3>Video based learning (External sites)</h3>
       <h4><a href="http://www.learnenglishfeelgood.com/eslvideo/index.html">Learning English Feel Good</a></h4>
       <h3>YouTube videos, Questions</h3>
-      <h4><a href="tiger-cage.html">     Caged Lion Story</a></h4>
+      <h4><a href="tiger-cage.html">Caged Lion Story</a></h4>
+      <h4><a href="pinocchio.html">Pinocchio</a></h4>
     </div>
     <div class="col-sm-2 sidenav">
       <!--
